<resources>
    <string name="app_name">E Shop Sample</string>
    <string name="phones">Phones</string>
    <string name="phones_category_title">Phones</string>
    <string name="books_category_title">Books</string>
    <string name="tablets_category_title">Tablets</string>
    <string name="tvsets_category_title">TvSets</string>
    <string name="computers_category_title">Computers</string>
    <string name="tools_category_title">Tools</string>
    <string name="auto_accessories_category_title">Auto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">El dorado</string>
    <string name="new_product">New product</string>
    <string name="new_label">New</string>
    <string name="hot_sale">Hot sale</string>
    <string name="buy_now">Buy Now!</string>
    <string name="hot_sales">Hot sales</string>
    <string name="select_category">Select category</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="dollar">$%d</string>
    <string name="add_to_cart">Add to Cart\u0020\u0020\u0020      $%d</string>
    <string name="_128_gb">128 Gb</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="product_details">Product details</string>
    <string name="back">back</string>
    <string name="favorites">favorites</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="_108_12_mp">108 + 12 mp</string>
    <string name="_8_gb">8 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="color_case">color case</string>
    <string name="explorer">Explorer</string>
    <string name="minus">minus</string>
    <string name="_1">1</string>
    <string name="plus">plus</string>
    <string name="photo">photo</string>
    <string name="remove">remove</string>
    <string name="please_wait">Please wait</string>
    <string name="category_button">category button</string>
    <string name="try_again">Try again</string>
    <string name="error_message">Oops... error happened</string>
    <string name="close">close</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="my_favorites">My Favorites</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="exit">Exit</string>
    <string name="cart">Cart</string>
    <string name="empty_list_message">The list is empty. \nIt\'s possible everything sold.</string>
    <string name="ecommerce">Ecommerce</string>
    <string name="concept">Concept</string>

    <string-array name="brands">
        <item>Xiaomi</item>
        <item>Samsung</item>
        <item>Huawei</item>
    </string-array>

    <string-array name="prices">
        <item>$0-$500</item>
        <item>$501-$1000</item>
        <item>$1001-$1500</item>
        <item>$1501-$2000</item>
    </string-array>

    <string-array name="sizes">
        <item>3.5 to 4.9 inches</item>
        <item>5.0 to 5.4 inches</item>
        <item>5.4 to 5.9 inches</item>
        <item>6.0 to 6.4 inches</item>
        <item>over 6.5 inches</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="number">number</string>
</resources>