<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomNavView"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:background="@drawable/black_shape_bg"
    android:paddingStart="17dp"
    android:paddingEnd="17dp"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:icon="@drawable/ic_exit_to_app"
        android:text="@string/exit"
        android:textStyle="italic|bold"
        android:textAppearance="?attr/textAppearanceListItem"
        android:backgroundTint="@color/black"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <ImageView
        android:id="@+id/searchBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_search"
        android:contentDescription="@string/add_to_cart"
        />

   <ImageView
        android:id="@+id/filterBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:srcCompat="@drawable/ic_filter"
        android:padding="8dp"
        android:contentDescription="@string/filter_options"
        android:layout_marginStart="16dp"
        />

    <ImageButton
        android:id="@+id/cartBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_cart_nav"
        android:background="@null"
        android:padding="4dp"
        android:contentDescription="@string/cart"
        android:layout_marginStart="16dp"
        />

    <ImageButton
        android:id="@+id/favoritesBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_favorite_nav"
        app:tint="@color/white"
        android:background="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorites"
        />

</LinearLayout>