<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@color/black"
    >

    <ImageView
        android:id="@+id/pictureImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/hot_sale"
        />

    <TextView
        android:id="@+id/newTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/new_background"
        android:text="@string/new_label"
        android:textColor="@color/white"
        android:textSize="6dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/new_product"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        tools:text="Xiaomi Redmi"
        />

  <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        tools:text="best of the best"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/buyNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_now"
        android:layout_marginTop="74dp"
        android:layout_marginStart="24dp"
        android:scaleY="0.7"
        />

</androidx.cardview.widget.CardView>