<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_shape_bg"
    android:backgroundTint="@color/white"
    >

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_close_btn_bg"
        android:contentDescription="@string/close"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/ic_close"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_options"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toStartOf="@id/doneButton"
        app:layout_constraintStart_toEndOf="@id/closeButton"
        app:layout_constraintTop_toTopOf="@id/closeButton" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"

        android:text="@string/done"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/closeButton" />

    <TextView
        android:id="@+id/brandTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/brand"
        android:textColor="@color/black"

        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/doneButton" />

    <Spinner
        android:id="@+id/brandSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/brand"

        android:entries="@array/brands"

        app:layout_constraintEnd_toEndOf="@id/doneButton"
        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/brandTitle" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="@color/black"

        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/brandSpinner" />

    <Spinner
        android:id="@+id/priceSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/price"

        android:entries="@array/prices"

        app:layout_constraintEnd_toEndOf="@id/doneButton"
        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/priceTitle" />

    <TextView
        android:id="@+id/sizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/size"
        android:textColor="@color/black"

        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/priceSpinner" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="40dp"

        android:contentDescription="@string/size"
        android:entries="@array/sizes"

        app:layout_constraintEnd_toEndOf="@id/doneButton"
        app:layout_constraintStart_toStartOf="@id/closeButton"
        app:layout_constraintTop_toBottomOf="@id/sizeTitle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>

