<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        >

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_bg_black"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"

            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/addAddressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/add_address"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <ImageView
            android:id="@+id/cartImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/add_to_cart"
            android:src="@drawable/ic_gps"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        android:elevation="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider1"
                tools:listitem="@layout/cart_item"
                />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="2dp"
                app:dividerColor="@color/gray"

                android:layout_marginBottom="16dp"

                app:layout_constraintBottom_toTopOf="@id/totalTitle"
                />

            <TextView
                android:id="@+id/totalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/lite_gray"
                android:textSize="18sp"
                android:textStyle="bold"

                android:layout_marginBottom="16dp"

                app:layout_constraintStart_toStartOf="@id/deliveryTitle"
                app:layout_constraintBottom_toTopOf="@id/deliveryTitle"
                />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="$9999"

                android:layout_marginStart="160dp"

                app:layout_constraintBaseline_toBaselineOf="@id/totalTitle"
                app:layout_constraintEnd_toEndOf="@id/checkoutButton"
                />

            <TextView
                android:id="@+id/deliveryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/lite_gray"
                android:textSize="18sp"
                android:textStyle="bold"

                android:layout_marginStart="64dp"
                android:layout_marginBottom="24dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/divider2"
                />

            <TextView
                android:id="@+id/deliveryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"

                app:layout_constraintBaseline_toBaselineOf="@id/deliveryTitle"
                app:layout_constraintStart_toStartOf="@id/totalTextView"
                />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                app:dividerColor="@color/gray"

                android:layout_marginBottom="24dp"

                app:layout_constraintBottom_toTopOf="@id/checkoutButton"
                />

            <Button
                android:id="@+id/checkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="24dp"
                android:textStyle="bold"
                android:padding="8dp"

                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="8dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>