<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.favoritesfragment.FavoritesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        >

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btn_bg_black"
            android:contentDescription="@string/back"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"

            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/addAddressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/add_address"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <ImageView
            android:id="@+id/cartImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/add_to_cart"
            android:padding="8dp"
            android:src="@drawable/ic_gps"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_favorites"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        android:elevation="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/black"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favoritesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="100"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/favorites_item" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>