<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_black"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCV"
            android:layout_width="88dp"
            android:layout_height="88dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="#777777"
                android:contentDescription="@string/photo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toEndOf="@id/imageCV"
            app:layout_constraintTop_toTopOf="@id/imageCV"
            tools:text="Samsung QE"
            />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="16sp"

            android:layout_marginBottom="8dp"

            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintBottom_toBottomOf="@id/imageCV"
            tools:text="$9999"
            />

        <ImageView
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove"
            app:tint="#777777"

            android:layout_marginEnd="40dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/remove" />

        <LinearLayout
            android:layout_width="26dp"
            android:layout_height="68dp"
            android:gravity="center_horizontal"
            android:background="@drawable/count_background"
            android:orientation="vertical"

            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toStartOf="@id/removeBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:id="@+id/plusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plus"
                android:paddingTop="14dp"
                android:paddingBottom="2dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_plus"
                />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <ImageView
                android:id="@+id/minusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/minus"
                android:paddingTop="6dp"
                android:paddingBottom="10dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_minus"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>